--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 client/node_modules
 client/package-lock.json
-src/assets/logo1.jpeg
-src/assets/logo2.png
-src/assets/logo3.png
-src/assets/myLogo.jpeg
+client/src/assets/logo1.jpeg
+client/src/assets/logo2.png
+client/src/assets/logo3.png
+client/src/assets/myLogo.jpeg
